--- a/command.ini
+++ b/command.ini
@@ -1,10 +1,10 @@
 ﻿-----command-----
-command00 = !입장
+command00 = !채소입장
 command01 = !메뉴
 command02 = !설정확인
 command03 = !채널확인
 command04 = !채널이동
-command05 = !소환
+command05 = !채소소환
 command06 = !불러오기
 command07 = !초기화
 command08 = !명치
@@ -27,7 +27,7 @@ command24 = !킬초기화
 command25 = !킬
 command26 = !킬삭제
 command27 = !경주
-command28 = !채널설정
+command28 = !채소채널설정
 command29 = !템초기화
 command30 = !템
 command31 = !템삭제
