--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 956533030292451359
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 956534437590499389
 itemchannel = 
 
 before_alert = 1
